Use Integer.valueOf instead of passing the value to Integer constructor